# 1d-mpm-taichi

./: .gitignore  1d_mpm_taichi.py  pyproject.toml
